--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,6 +28,7 @@
             android:layout_height="wrap_content"
             android:lineSpacingExtra="6dp"
             android:text="Guess the Word"
+            android:gravity="center"
             android:textAlignment="center"
             android:textColor="#332FA2"
             android:textSize="26sp" />
@@ -44,6 +45,19 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.008" />
+
+    <com.airbnb.lottie.LottieAnimationView
+        android:layout_width="67dp"
+        android:layout_height="71dp"
+        android:layout_marginEnd="8dp"
+        android:id="@+id/idea"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
+        app:layout_constraintEnd_toStartOf="@+id/linearLayout"
+        app:layout_constraintHorizontal_bias="0.8"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/life"
+        app:layout_constraintVertical_bias="0.349"
+        app:lottie_rawRes="@raw/idea" />
 
     <TextView
         android:id="@+id/life"
@@ -88,6 +102,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
+        android:id="@+id/linearLayout3"
         android:layout_width="393dp"
         android:layout_height="63dp"
         android:gravity="center"
