--- a/app/src/main/res/layout/popupwin.xml
+++ b/app/src/main/res/layout/popupwin.xml
@@ -4,8 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/popup_win"
+    android:background="@color/white"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-
     <Button
         android:id="@+id/button"
         android:layout_width="118dp"
@@ -19,7 +19,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/retry2"
         app:layout_constraintVertical_bias="0.868" />
-
     <ImageView
         android:id="@+id/retry2"
         android:layout_width="79dp"
@@ -31,18 +30,28 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView10"
         app:layout_constraintVertical_bias="0.785" />
-
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/congratulations"
-        android:layout_width="332dp"
-        android:layout_height="205dp"
+        android:layout_width="342dp"
+        android:layout_height="237dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.492"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.258"
+        app:layout_constraintVertical_bias="0.141"
         app:lottie_rawRes="@raw/congratulations" />
-
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/congratulations2"
+        android:layout_width="342dp"
+        android:layout_height="237dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.492"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.141"
+        app:lottie_rawRes="@raw/conrts2" />
     <TextView
         android:id="@+id/textView10"
         android:layout_width="169dp"
@@ -51,12 +60,11 @@
         android:gravity="center"
         android:text="YOU WON"
         android:textSize="30dp"
+        android:textColor="@color/black"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/congratulations"
         app:layout_constraintVertical_bias="0.366" />
-
-
 </androidx.constraintlayout.widget.ConstraintLayout>
